--- a/npcs/Races Classes and Subclasses/feats.yaml
+++ b/npcs/Races Classes and Subclasses/feats.yaml
@@ -157,6 +157,9 @@
    - content: Your ranged attacks ignore some cover, no disavantage at long range, and possibility to take -5 to hit for +10 on ranged damage.
    - title: Shield Master
    - content: Attack also allows to shove, shield bonus to Dex. saving throws againts spells, and no 1/2 damage on successful saving throw.
+   - title: Silver Tracery
+   - content: Prerequisite - Warforged. Alchemical silver tracery covers your body, allowing you to overcome the supernatural defenses of certain creatures and protecting against some magical attacks. Your natural weapons and 
+              your grapple checks made to deal damage are treated as silvered weapons for the purpose of overcoming damage reduction. As well, you gain a +1 bonus on Fortitude saves against spells and spell-like abilities.
    - title: Skill Expert
    - content: +1 in one ability, proficiency in one skill and expertise in one other in which you have proficiency.
    - title: Skilled
