--- a/npcs/captain_wheeler.yaml
+++ b/npcs/captain_wheeler.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -215,7 +215,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Sailor; Slaver; Performer
+    - Sailor, Slaver, Performer
     
 
     #
@@ -345,6 +345,8 @@ npc:
     #
     adjectives:
     - Bold
+    - Cunning
+    - Overconfident
 
   improv:
 
@@ -422,7 +424,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Sailing; Music, shanties in particular
+      Sailing, Music, shanties in particular
       
     #
     # Vulnerabilities:
@@ -431,7 +433,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      N/A
+      Overconfidence
       
     #
     # Secrets:
@@ -454,7 +456,7 @@ npc:
     con: 12
     int: 8 
     wis: 12
-    cha: 11
+    cha: 14
 
   #
   # Special characteristics.
@@ -464,19 +466,43 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:
-    - Dragonborn Abilities:
-      - Breathe Weapon: Can exhale fire in a 15 foot cone with a DC 13. A creature takes 2d6 damage on a failed save, and half as much damage on a successful one.           
-        Damage Resistance: Resistance to Fire       
-
-    special-abilities:
-    - Proficiencies: Persuasion; Medecine; Insight; Perception    
-    attacks: |
-      1 Attack with his Longsword
-    combat-tactics: |
-      Wheeler will always try to beat with his breath weapon and longsword.
-    special-equipment:
+    saving-throws:
+    - Charisma
+    - Dexterity
+    damage-immunities:
     - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Fire
+    skills:
+    - Leatherworking
+    proficiencies:
+    - Medicine
+    - Perception
+    - Deception    
+    - Insight
+    - Persuasion
+  special-abilities:
+  - title: Metallic Dragonborn Abilities
+  - abilities: 
+    - title: Breath Weapon
+    - content: When you take the Attack action on your turn, you can replace one of your attacks with an exhalation of magical energy in a 15-foot cone. Each creature in that area must make a Dexterity saving throw 
+               (DC = 8 + your Constitution modifier + your proficiency bonus). On a failed save, the creature takes 1d10 Fire damage. On a successful save, it takes half as
+               much damage. This damage increases by 1d10 when you reach 5th level (2d10), 11th level (3d10), and 17th level (4d10).
+    - title: Draconic Resistance
+    - content: You have resistance to Fire damage.
+    - title: Metallic Breath Weapon
+    - content: At 5th level, you gain a second breath weapon. When you take the Attack action on your turn, you can replace one of your attacks with an exhalation in a 15-foot cone. The save DC for this breath
+               is 8 + your Constitution modifier + your proficiency bonus. Whenever you use this trait, choose one
+               Enervating Breath - Each creature in the cone must succeed on a Constitution saving throw or become incapacitated until the start of your next turn.
+               Repulsion Breath - Each creature in the cone must succeed on a Strength saving throw or be pushed 20 feet away from you and be knocked prone.
+               Once you use your Metallic Breath Weapon, you can’t do so again until you finish a long rest.        
+   
+  - title: Attacks
+  - content: 1 Attack with his Longsword
+  - title: Combat Tactics
+  - content: Wheeler will always try to lead with his breath weapon and longsword.
                                                                    
   profile:
 
