--- a/npcs/cedric_wrath.yaml
+++ b/npcs/cedric_wrath.yaml
@@ -359,7 +359,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  \"Git yee right wit yer Gods ya heathens!\" shouts the fiery red-faced oddly preacher from his street side podium
+    introduction:  Git yee right wit yer Gods ya heathens!, shouts the fiery red-faced oddly preacher from his street side podium
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -463,39 +463,87 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Constitution
+    - Intelligence
+    damage-immunities:
+    - Necrotic
+    condition-immunities:
+    - Frightened, Charmed, Poisoned, Stunned
+    resistances:
+    - Fire, Poison, Cold, Lightning
     skills:
-    - Cleric Abilities:
-      - Spellcasting:
-        - Cantrips: Guidance, Light, Sacred Flame, Spare the Dying, Shillelagh
-          1st Level: Bane, Command, Detect Magic, Inflict Wounds
-          2nd Level: Lesser Restoration, Hold Person, Spiritual Weapon
-          3rd Level: Animate Dead, Speak with Dead, Clairvoyance
-          4th Level: Banishment, Stone Shape
-        Channel Divinity: Turn Undead, Destroy Undead
-    - Trickery Domain Abilities:
-      - Blessing of the Trickster: Give another willing creature advantage on Stealth roles for an hour
-        Invoke Duplicity: you can use your Channel Divinity to create an illusory duplicate of yourself. As an action, you create a perfect illusion of yourself that lasts for 1 minute, or until you lose your concentration 
-                          (as if you were concentrating on a spell). The illusion appears in an unoccupied space that you can see within 30 feet of you. As a bonus action on your turn, you can move the illusion up to 30 feet
-                          to a space you can see, but it must remain within 120 feet of you. For the duration, you can cast spells as though you were in the illusion's space, but you must use your own senses. Additionally, 
-                          when both you and your illusion are within 5 feet of a creature that can see the illusion, you have advantage on attack rolls against that creature, given how distracting the illusion is to the target
-        Cloak of Shadows: you can use your Channel Divinity to vanish. As an action, you become invisible until the end of your next turn. You become visible if you attack or cast a spell
-        Divine Strike: Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an extra 1d8 poison damage to the target. When you reach 14th level, the extra damage increases to
-                       2d8.
-        Spellcasting:
-        - 1st Level: Charm Person, Disguise Self
-          3rd Level: Mirror Image, Pass Without Trace
-          5th Level: Blink, Dispel Magic
-          7th Level: Dimension Door, Polymorph
+    - Leatherworking
+    proficiencies:
+    - Arcana
+    - Perception
+    - Deception    
+    - Intimidation
+    - Persuasion
+  special-abilities:
+  - title: Cleric Abilities
+  - abilities:
+  - title: Cleric Spellcasting
+  - abilities: 
+    - title: Spell DC
+    - content: 16
+    - title: Cantrips
+    - content: Guidance, Light, Sacred Flame, Spare the Dying, Shillelagh
+    - title: 1st Level
+    - content: Bane, Command, Detect Magic, Inflict Wounds
+    - title: 2nd Level
+    - content: Lesser Restoration, Hold Person, Spiritual Weapon
+    - title: 3rd Level
+    - content: Animate Dead, Speak with Dead, Clairvoyance
+    - title: 4th Level
+    - content: Banishment, Stone Shape
+  - title: Channel Divinity
+  - abilities:    
+    - title: Turn Undead
+    - content: As an action, you present your holy Symbol and speak a prayer censuring the Undead. Each Undead that can see or hear you within 30 feet of you must make a Wisdom saving throw. If the creature fails its saving 
+               throw, it is turned for 1 minute or until it takes any damage. A turned creature must spend its turns trying to move as far away from you as it can, and it can't willingly move to a space within 30 feet of you. 
+               It also can't take Reactions. For its action, it can use only the Dash action or try to Escape from an Effect that prevents it from moving. If there's nowhere to move, the creature can use the Dodge action.    
+    - title: Destroy Undead
+    - content: Starting at 5th Level, when an Undead of CR 1/2 or lower fails its saving throw against Your Turn Undead feature, the creature is instantly destroyed.
+  - title: Trickery Domain Abilities
+  - abilities: 
+    - title: Spellcasting
+    - abilities:
+    - title: Spell DC
+    - content: 16
+    - title: 1st Level
+    - content: Charm Person, Disguise Self
+    - title: 3rd Level
+    - content: Mirror Image, Pass Without Trace
+    - title: 5th Level
+    - content: Blink, Dispel Magic
+    - title: 7th Level
+    - content: Dimension Door, Polymorph
+    - title: Blessing of the Trickster
+    - content: You can use your action to touch a willing creature other than yourself to give it advantage on Dexterity (Stealth) checks. This blessing lasts for 1 hour or until you use this feature again.
+    - title: Channel Divinity - Invoke Duplicity
+    - content: You can use your Channel Divinity to create an illusory duplicate of yourself. As an action, you create a perfect illusion of yourself that lasts for 1 minute, or until you lose your concentration 
+               (as if you were concentrating on a spell). The illusion appears in an unoccupied space that you can see within 30 feet of you. As a bonus action on your turn, you can move the illusion up to 30 feet 
+               to a space you can see, but it must remain within 120 feet of you. For the duration, you can cast spells as though you were in the illusion's space, but you must use your own senses. Additionally, 
+               when both you and your illusion are within 5 feet of a creature that can see the illusion, you have advantage on attack rolls against that creature, given how distracting the illusion is to the target
+    - title: Channel Divinity - Cloak of Shadows
+    - content: You can use your Channel Divinity to vanish. As an action, you become invisible until the end of your next turn. You become visible if you attack or cast a spell
+    - title: Divine Strike
+    - content: Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an extra 1d8 poison damage to the target. When you reach 14th level, the extra damage increases to 2d8.
+  - title: Feats
+  - content: Actor, Inspiring Leader, Observant, Tavern Brawler, War Caster
+  
+  - title: Attacks
+  - content: His club using the Shillelagh cantrip 
+  - title: Combat Tactics
+  - content: He will try to talk his way out of fights, but if provoked he's a brawler and will fight with his club, his fists and anything else at his disposal
 
-    special-abilities:
-    - Feats: Actor, Inspiring Leader, Observant, Tavern Brawler, War Caster
-    attacks: |
-       His club using the Shillelagh cantrip 
-    combat-tactics: |
-       He will try to talk his way out of fights, but if provoked he's a brawler and will fight with his club, his fists and anything else at his disposal
-    special-equipment:
-    - +1 Greatclub
-    - Several different religious symbols
+  - title: Special Equipment
+  - abilities:
+    - title: +1 Greatclub
+    - content: You have a +1 bonus to Attack and Damage Rolls made with this weapon.
+    - title: Religious Symbols
+    - content: Cedric carries several different religious symbols at any given time
 
   profile:
 
@@ -522,7 +570,7 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Cedric Wrath is an agent of chaos, plani and simple. He is a short broad human with flaming red messy hair and a flaming red beard. He wears chainmail armor underneath his clerics vestments which are painted with the
+      Cedric Wrath is an agent of chaos, plain and simple. He is a short broad human with flaming red messy hair and a flaming red beard. He wears chainmail armor underneath his clerics vestments which are painted with the
       symbols of a variety of different dieties. The only indication of which god he actually follows is the small symbol of Cyric carved into the head of his greatclub (jawless skull on a purple sunburst). He is a devout
       beleiver in chaos and will do whatever he can to stir up as much trouble as he can, whenever he can for whoever he can. His god's current plan involves him working with the Dumas Family and helping their patron achieve
       their goals, but he is in no way loyal to them in any way, and will have no problem screwing them over when the appropriate time inevitably comes
