--- a/npcs/coalwater.yaml
+++ b/npcs/coalwater.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: adolescent
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -215,7 +215,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Thieves' guild professor, security consultant
+    - Thieves' Guild Professor, Security Consultant
     
 
     #
@@ -271,7 +271,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 10
+    level: 11
 
     #
     # Alignments (case insensitive):
@@ -289,14 +289,6 @@ npc:
     #
     alignment: Chaotic Good
 
-    #
-    # Alignment tendencies:
-    # same as alignment, can be 0 or more.
-    #
-    # Optional.
-    #
-    tendencies:
-    - N/A
 
     #
     # Languages the character speaks
@@ -311,9 +303,9 @@ npc:
     #
     languages:
     - Common
-    - elvish
-    - dwarvish
-    - orcish
+    - Elvish
+    - Dwarvish
+    - Orcish
 
     #
     # Factions:
@@ -333,8 +325,8 @@ npc:
     # Optional.  0 or more.
     #
     factions:
-    - id: local_thieves_guild
-      name: Local Thieves' Guild
+    - id: thieves_guild
+      name: Thieves' Guild
       role: Trainer and Consultant
 
     #
@@ -465,37 +457,75 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Dexterity
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Sleep Magic
+    resistances:
+    - Charmed
     skills:
-    - Drow Abilities:
-      - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
-        Keen Senses: Proficiency in Perception
-        Fey Ancestry: Advantage on saving throws against charm and immune to sleep magic
-        Trance: Deasn't need to sleep, 4 hours meditation counts as a long rest
-        Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
-        Drow Magic: Can cast Dancing Lights, Faerie Fire, Darkness, Detect Magic, Dispel Magic and Levitate once per long rest with charisma as spellcasting ability
-        Drow Weapons Training: Proficient with rapiers, shortswords and hand crossbow
+    - Training
+    proficiencies:
+    - Arcana
+    - Perception
+    - Deception    
+    - History
+    - Persuasion
+    - Survival
+  special-abilities:
+  - title: Drow Abilities
+  - abilities: 
+    - title: Superior Darkvision 
+    - content: See 120 in like bright light in dim light and like dim light in darkness
+    - title: Keen Senses
+    - content: Proficiency in Perception
+    - title: Fey Ancestry
+    - content: Advantage on saving throws against charm and immune to sleep magic
+    - title: Trance
+    - content: Doesn't need to sleep, 4 hours meditation counts as a long rest
+    - title: Sunlight Sensitivity
+    - content: Disadvantage on attack and perception roles in direct sunlight
+    - title: Drow Magic
+    - content: Can cast Dancing Lights, Faerie Fire, Darkness
+    - title: Drow Weapons Training
+    - content: Proficient with rapiers, shortswords and hand crossbow
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+    - title: Evasion
+    - content: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
+    - title: Reliable Talent
+    - content: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10. 
+  - title: Thief Abilities
+  - abilities: 
+    - title: Fast Hands
+    - content: You can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action.
+    - title: Second-Story Work
+    - content: When you choose this archetype at 3rd Level, you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you 
+               cover increases by a number of feet equal to your Dexterity modifier.
+    - title: Supreme Sneak
+    - content: You have advantage on a Dexterity (Stealth) check if you move no more than half your speed on the same turn.       
+   
+  - title: Attacks
+  - content: 2 Attacks with his short sword or dagger
+  - title: Combat Tactics
+  - content: Coalwater will often duck out of direct confrontation and find better leverage on his enemies from the shadows or higher ground. It often uses their natural Drow abilities of faerie fire and darkness to 
+             manipulate the vision of combatants.
 
-      Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
-
-      Thief Abilities:
-      - Fast Hands: Can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action.
-        Second-Story Work: climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you cover increases by a number of feet equal to your Dexterity modifier
-        Supreme Sneak: has advantage on a Dexterity (Stealth) check if you move no more than half your speed on the same turn.       
-
-    special-abilities:
-    - Proficiencies: Persuasion; Survival; Perception; Insight; Arcana; History;    
-    attacks: |
-      2 Attacks with his short sword or dagger
-    combat-tactics: |
-      Coalwater will often duck out of direct confrontation and find better leverage on his enemies from the shadows or higher ground. It often uses their natural Drow abilities of faerie fire and darkness to 
-      manipulate the vision of combatants.
-    special-equipment:
-    - A chess set with black farmers and white geese as pieces; a Kubernetic file
-    - used for cutting open Pods.
+  - title: Special Equipment
+  - abilities:
+    - title: Chess Set
+    - content: A chess set with black farmers and white geese as pieces
 
   profile:
 
