--- a/npcs/corbrin_thulebard.yaml
+++ b/npcs/corbrin_thulebard.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: Older Adult
 
     #
     # Races (case insensitive):
@@ -336,6 +336,7 @@ npc:
       name: Military/Watch
     - id: adventurer_s_guild
       name: Adventurer's Guild
+      role: Sergeant
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -360,7 +361,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  A Gruff weathered-looking, one-armed dwarf stands behind the counter of the armory. /"What kin Ah do ya for, citizen?/"
+    introduction:  A Gruff weathered-looking, one-armed dwarf stands behind the counter of the armory. "What kin Ah do ya for, citizen?"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -463,41 +464,70 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:
-    - Dwarf Abilities:
-      - Darkvision: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.   
-        Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage           
-        Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-        Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                      instead of his normal Proficiency Bonus 
-      Fighter Abilities:
-      - Fighting Style: Great Weapon Fighting
-        Second Wind: Bonus Action to regain 1d10 + 5
-        Action Surge: Once every short/long rest can take an extra action
-        Extra Attack: Can attack twice each turn
-      Echo Knight Abilities:
-      - Manifest Echo: 
-        - Description: can use a bonus action to magically manifest an echo of yourself in an unoccupied space you can see within 15 feet of you. This echo is a magical, translucent, gray image of you that lasts until it 
-                       is destroyed, until you dismiss it as a bonus action, until you manifest another echo, or until you're incapacitated. Your echo has AC 14 + your proficiency bonus, 1 hit point, and immunity to all 
-                       conditions. If it has to make a saving throw, it uses your saving throw bonus for the roll. It is the same size as you, and it occupies its space. On your turn, you can mentally command the echo to 
-                       move up to 30 feet in any direction (no action required). If your echo is ever more than 30 feet from you at the end of your turn, it is destroyed.
-          Additional Information:
-          - As a bonus action, you can teleport, magically swapping places with your echo at a cost of 15 feet of your movement, regardless of the distance between the two of you                        - When you take the Attack action on your turn, any attack you make with that action can originate from your space or the echo's space. You make this choice for each attack
-          - When a creature that you can see within 5 feet of your echo moves at least 5 feet away from it, you can use your reaction to make an opportunity attack against that creature as if you were in the 
-            echo's space
-        Unleash Incarnation: Whenever you take the Attack action, you can make one additional melee attack from the echo's position. You can use this feature a number of times equal to your Constitution modifier (a minimum 
-                             of once). You regain all expended uses when you finish a long rest.
-        Echo Avatar:  As an action, you can see through your echo's eyes and hear through its ears. During this time, you are deafened and blinded. You can sustain this effect for up to 10 minutes, and you can end it at any 
-                      time (requires no action). While your echo is being used in this way, it can be up to 1,000 feet away from you without being destroyed.       
-
-    special-abilities:
-    - Proficiencies: Persuasion; Survival; Perception; Insight; Arcana; History;    
-    attacks: |
-      2 Attacks with his echo attack or warhammer
-    combat-tactics: |
-      He doesn't fight anymore, but if pressed into it he will summon and Echo Avatar to do his fighting for him at a distance
-    special-equipment:
+    saving-throws:
+    - Strength
+    - Wisdom
+    damage-immunities:
     - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Poison
+    skills:
+    - Training
+    proficiencies:
+    - Arcana
+    - Perception
+    - Survival    
+    - Insight
+    - Persuasion
+    - History
+  special-abilities:
+  - title: Dwarf Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.
+    - title: Dwarven Resistance
+    - content: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+    - title: Tool Proficiency
+    - content: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
+    - title: Dwarven Combat Training
+    - content: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+    - title: Stonecunning
+    - content: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+               instead of his normal Proficiency Bonus
+  - title: Fighter Abilities
+  - abilities:
+    - title: Fighting Style
+    - content:
+    - title: Second Wind
+    - content: Bonus Action to regain 1d10 + 
+    - title: Action Surge
+    - content: Once every short/long rest can take an extra action
+    - title: Extra Attack
+    - content: Can attack twice each turn
+  - title: Echo Knight Abilities
+  - abilities: 
+    - title: Manifest Echo
+    - content: You can use a bonus action to magically manifest an echo of yourself in an unoccupied space you can see within 15 feet of you. This echo is a magical, translucent, gray image of you that lasts until it 
+               is destroyed, until you dismiss it as a bonus action, until you manifest another echo, or until you're incapacitated. Your echo has AC 14 + your proficiency bonus, 1 hit point, and immunity to all 
+               conditions. If it has to make a saving throw, it uses your saving throw bonus for the roll. It is the same size as you, and it occupies its space. On your turn, you can mentally command the echo to 
+               move up to 30 feet in any direction (no action required). If your echo is ever more than 30 feet from you at the end of your turn, it is destroyed.
+               As a bonus action, you can teleport, magically swapping places with your echo at a cost of 15 feet of your movement, regardless of the distance between the two of you
+               When you take the Attack action on your turn, any attack you make with that action can originate from your space or the echo's space. You make this choice for each attack
+               When a creature that you can see within 5 feet of your echo moves at least 5 feet away from it, you can use your reaction to make an opportunity attack against that creature as if you were in the echo's space
+    - title: Unleash Incarnation
+    - content: Whenever you take the Attack action, you can make one additional melee attack from the echo's position. You can use this feature a number of times equal to your Constitution modifier (a minimum 
+               of once). You regain all expended uses when you finish a long rest.
+    - title: Echo Avatar
+    - content: As an action, you can see through your echo's eyes and hear through its ears. During this time, you are deafened and blinded. You can sustain this effect for up to 10 minutes, and you can end it at any 
+               time (requires no action). While your echo is being used in this way, it can be up to 1,000 feet away from you without being destroyed.    
+
+  - title: Attacks
+  - content: 2 Attacks with his echo attack or warhammer
+  - title: Combat Tactics
+  - content: He doesn't fight anymore, but if pressed into it he will summon and Echo Avatar to do his fighting for him at a distance
+
                                                                    
   profile:
 
